# CodeGram-WS

./: README.md  config.py  example.py  executor.py  main.py  pyproject.toml  requirements.txt  rmq.py
tests/: test_executor.py
utils/: extract.py
